[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "CAB320A1"
version = "0.1.0"
description = "CAB320A1 Simple Search AI Assignment."
authors = ["Parker Rennie, Zachariah Crawford, Joshua Hecke"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
flake8 = "^7.0.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.21.0"

[tool.black]
exclude = '''
/(
    mirror
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
skip = ["mirror"]